# netmikro

./: .env.example  .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: contributing.md  index.md  requirements.txt  structure.md
docs/api/: RouterOS.md  base.md  ip.md  routeros.md  system.md
docs/css/: custom.css  termynal.css
docs/others/: validators.md
docs/utils/: common.md
netmikro/: __init__.py  _utils.py  exceptions.py  routeros.py  validators.py
netmikro/connector/: __init__.py  routeros.py
netmikro/modules/: __init__.py  base.py  ip.py  system.py  validators.py
netmikro/utils/: __init__.py  common.py  converter.py  validators.py
tests/: _utils.py  conftest.py  test_base.py  test_ip.py  test_router.py  test_system.py  test_utils.py  test_validators.py
